sass/layout/_global.scss
html {
  background-color: $brown-light;
  font-size: 16px;
  line-height: 1.5;
}

body {
  background-color: $bg;
  color: $brown-dark;
  font-size: em(18);
  font-family: $andada;
  margin-top: 2em;
  box-shadow: 0 em(-5) em(5) rgba($brown-dark, 0.5);
  padding-top: 1em;
  font-weight: normal;
}

p {
  margin: 0 auto;
  max-width: 600px;
  -moz-hyphens: auto;
  hyphens: auto;
}

ul {
  margin: 0;
}

a {
  text-decoration: none;
  color: $green;
  transition: all 0.4s;
}

// Headings

h1, h2, h3, h4 {
  font-family: $track;
  margin: 0;
  font-weight: normal;
}


// Containers

header, section[role="main"] {
  min-width: 400px;
  max-width: 960px;
  width: 100%;
  padding: 0 1.5em;
  margin-left: auto;
  margin-right: auto;
}

footer {
  min-width: 400px;
  width: 100%;
}

section[role="main"] {
  margin-bottom: 2em;
}

// Buttons

button {
  border: 0;
  background: transparent;
  &:focus {
      outline: none;
      border: 1px dotted rgba($blue-light, 0.8);
    }
}

